--- a/Index.html
+++ b/Index.html
@@ -19,13 +19,17 @@
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
 
-    <!-- Modules -->
+    <!-- Module -->
     <script src="Scripts/Modules/module.js"></script>
 
-    <!-- Routes -->
+    <!-- Route -->
     <script src="Scripts/Routes/route.js"></script>
 
     <!-- Components -->
+
+    <!-- Services -->
+    <script src="Scripts/Services/channels-Api.service.js"></script>
+    <script src="Scripts/Services/messages-Api.service.js"></script>
 
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
