--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,10 @@
     <script src="Scripts/Services/messages-Api.service.js"></script>
 
     <!-- Controllers -->
+    <script src="Scripts/Controllers/channel.controller.js"></script>
     <script src="Scripts/Controllers/main.controller.js"></script>
+    <script src="Scripts/Controllers/admin.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
+    <script src="Scripts/Controllers/subscriptions.controller.js"></script>
 </body>
 </html>
