added favs functionalities

--- a/Scripts/Directives/FavoriteButton/FavoriteButton.html
+++ b/Scripts/Directives/FavoriteButton/FavoriteButton.html
@@ -4,7 +4,7 @@
                     'disabled': subscribed,
                     'btn-default': subscribed }">
     <span class="glyphicon"
-          ng-class="{ 'glyphicon-eye-open': !subscribed,
+          ng-class="{ 'glyphicon-plus-sign': !subscribed,
                       'glyphicon-ok': subscribed }"></span>
     <span ng-show="!subscribed"> Add to favorites</span>
     <span ng-show="subscribed"> Added to favorites</span>
