--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta charset="utf-8" />
     <link href="CSS/master.css" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">-->
     <link href="font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body ng-controller="MainController">
@@ -15,13 +14,13 @@
     <main class="container-fluid no-whitespace" ng-view></main>
 
     <!-- 3rd party libs and frameworks -->
-    <!--<script src="../app/js/timer.js"></script>-->
     <script src="Scripts/jquery-3.1.1.js"></script>
     <script src="Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="Scripts/jquery.signalR-2.2.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
+    <script src="Scripts/angular-signalr-hub.js"></script>
 
     <!-- Module -->
     <script src="Scripts/Modules/module.js"></script>
@@ -29,16 +28,12 @@
     <!-- Route -->
     <script src="Scripts/Routes/route.js"></script>
 
-    <!-- Components -->
-
     <!-- Directives -->
     <script src="Scripts/Directives/FavoriteButton/favorite-button.directive.js"></script>
 
     <!-- Services -->
     <script src="Scripts/Services/channels-Api.service.js"></script>
     <script src="Scripts/Services/messages-Api.service.js"></script>
-
-    <!-- Filters -->
 
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
